<resources>
    <string name="app_name">PharmaPlus</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_vente">Vente</string>
    <string name="title_finance">Finance</string>
    <string name="title_home">Home</string>
    <string name="title_commande">Commande</string>
    <string name="title_stock">Stock</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_connexion">PHARMA</string>
    <string name="signe_plus">+</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="accueil">Accueil</string>
    <string name="produit">Produits</string>
    <string name="filtrer_par_categorie">Filtrer par catégorie...</string>
    <string name="liste_produit">Liste des produits</string>
    <string name="liste_vente">Liste ventes</string>
    <string name="liste_commande">Liste commandes</string>
    <string name="texte_bienvenue">Bonjour Babacar,\nBienvenue dans Pharmaplus !</string>
    <string name="meilleures_ventes">Meilleures ventes</string>

</resources>