<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_vente"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_vente" />
    <item
        android:id="@+id/navigation_finance"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_finance" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_commande"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_commande" />

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_stock" />

</menu>