<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProduitFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteX="2dp" />

    <TextView
        android:id="@+id/head_produit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produit"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_produit"
        android:layout_width="400dp"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="120dp"/>

    <EditText
        android:id="@+id/etFilter"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/rounded_edit_text"
        android:hint="@string/filtrer_par_categorie"
        android:textColorHint="@color/white"
        android:padding="16dp" />

    <TextView
        android:id="@+id/textProduit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liste_produit"
        android:textColor="@color/black"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="200dp"
        android:textSize="@dimen/sub_title"
        android:textStyle="bold" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/search"
        />

    <ListView

        android:id="@+id/idProduit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="350dp"
        android:layout_marginRight="5dp" />


</FrameLayout>